<resources>
    <string name="app_name">Cybuverse</string>

    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_search">Search</string>


    <string name="activity_messenger_video">Video</string>
    <string name="activity_messenger_camera">Camera</string>
    <string name="activity_messenger_photo">Photo</string>
    <string name="activity_messenger_audio">Audio</string>
    <string name="activity_messenger_voice">Voice</string>
    <string name="activity_messenger_document">Document</string>
    <string name="activity_messenger_contact">Contact</string>
    <string name="activity_messenger_link">Link</string>
    <string name="activity_messenger_save">Save</string>

    <string name="about_game">Cyberbullying involves the use of information and communication technologies such as e-mail,
        cell phone and pager text messages, instant messaging, defamatory personal web sites and online
        own polling Websites to support deliberate, repeated and hostile behaviour by an individual
        or group that is intended to harm others.
        This problem is particularly persistent and acute during, junior/middle school period (NATIONAL-CENTER-FOR-EDUCATIONAL-STATISTICS. 1995).
        Much of school violence, particularly during adolescence, involves students bullying their peers ( Bolton. 1995).
        This is a form of infringement on their rights.
        Teachers, parents and society are increasingly confronted with cyberbullying situations which is very heartbreaking and makes it ill-equipped to handle.
        Although many teachers and administrators now recognise the problem of school bullying, few are aware that students are being harassed through electronic communication (Beran and li. 2005).
        Cyberbullying takes various forms of electric tools from cell phones, websites and among others.
        From the investigation conducted, a piece of news popped out that in the US, a boy using photo-editing tool pasted a girl\'s
        face onto a pornographic photo to embarrass the girl because of a little misunderstanding between them.
        This pinpoints the extent of this. I will term Cyber harmful behaviour.
        Awareness in the United States has risen, in the 2010s, due in part to high profile cases.
        Researchers have also demonstrated several severe consequences of cyberbullying victimisation.
        Internet trolling is a common form of bullying as well as Cyberstalking, which uses electronic communications to Stalk a victim; this may pose a credible threat to the victim.
        Research suggests that there are also interactions online that result in peer pressure, which can have, in fact, negative and positive impact on people involved.
        Further, bully-victim cycles are found where individuals are both bullies and victims( Ma, 2001; Pellegrini and partner, Dodge and Bates, 1997).</string>

</resources>
