<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main_small"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@color/dark_blue"
            android:alpha="0.5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:paddingTop="16dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/txt_logo_cybuverse" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="21sp"
                android:textAlignment="center"
                android:textColor="@color/faded_white"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/darker_gray">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:textColor="@color/white"
                    android:textColorHint="@color/faded_white"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/darker_gray">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:textColorHint="@color/faded_white"
                    android:textColor="@color/white"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/extraOpts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password">

                <CheckBox
                    android:id="@+id/remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="30dp"
                    android:text="@string/remember_me"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:checked="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:background="@android:color/transparent"
                    android:textAllCaps="false" />

            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="@drawable/bg_btn_blue_black"
                android:text="login"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/extraOpts"
                android:layout_gravity="center_horizontal"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/need_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_centerInParent="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:layout_gravity="center_horizontal"
                        android:text="Don't have an account?"
                        android:textSize="16sp"
                        android:textColor="@color/faded_white"
                        android:layout_marginEnd="2dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:layout_gravity="center_horizontal"
                        android:text="Register"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>


            </RelativeLayout>


        </LinearLayout>

        <FrameLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@color/dark_blue"
            android:alpha="0.5"/>


    </LinearLayout>

</RelativeLayout>
